syz-cluster/overlays/common/network-deny-all.yaml
# Copyright 2025 syzkaller project authors. All rights reserved.
# Use of this source code is governed by Apache 2 LICENSE that can be found in the LICENSE file.

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: default
spec:
  # Select all pods.
  podSelector: {}
  # Deny all ingress traffic.
  policyTypes:
  - Ingress
