syz-cluster/overlays/common/network-policy-reporter.yaml
# Copyright 2025 syzkaller project authors. All rights reserved.
# Use of this source code is governed by Apache 2 LICENSE that can be found in the LICENSE file.

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: reporter-server-access
spec:
  podSelector:
    matchLabels:
      app: reporter-server
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: email-reporter
