syz-cluster/overlays/common/network-policy-web-dashboard.yaml
# Copyright 2025 syzkaller project authors. All rights reserved.
# Use of this source code is governed by Apache 2 LICENSE that can be found in the LICENSE file.

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-to-web-dashboard
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: web-dashboard
  policyTypes:
  - Ingress
  ingress:
  - from: []
    ports:
    - protocol: TCP
      port: 8081
